- [BREAKING CHANGE] API Change: Vector2 angleRad(Vector2) now correctly returns counter-clockwise angles. See #5428
- Fixed vertices returned by Decal.getVertices() not being updated
- Fixes Issue #5048. The function Intersector.overlapConvexPolygons now should return the right minimum translation vector values.
- Update to MobiVM 2.3.10
- API Change: Removed Pool constructor with preFill parameter in favor of using Pool#fill() method. See #6117
- API Addition: Slider can now be configured to only trigger on certain mouse button clicks (Slider#setButton(int)).
- Fixed GlyphLayout not laying out correctly with color markup.
- Fixed TileDrawable not applying its scale correctly.
- API Addition: Added epsilon methods to maps with float values.
- API Addition: Added an insertRange method to array collections.
- Fixed GestureDetector maxFlingDelay.
- API Change: Changed default GestureDetector maxFlingDelay to Integer.MAX_VALUE (didn't work before, this matches that).
- Gdx.files.external on Android now uses app external storage - see wiki article File handling for more information
- Improved text, cursor and selection rendering in TextArea.
- API Addition: Added setProgrammaticChangeEvents, updateVisualValue, round methods to ProgressBar/Slider.
- iOS: Keyboard events working on RoboVM on iOS 13.5 and up, uses same API as on other platforms
- API Addition: Added AndroidLiveWallpaper.notifyColorsChanged() to communicate visually significant colors back to the wallpaper engine.
- API Change: AssetManager invokes the loaded callback when an asset is unloaded from the load queue if the asset is already loaded.
- GWT: changed audio backend to WebAudio API. Now working on mobiles, pitch implemented. Configuration change: preferFlash removed. When updating existing projects, you can remove the soundmanager js files from your webapp folder and the references to it from index.html